--- a/website-iwv/package.json
+++ b/website-iwv/package.json
@@ -36,6 +36,7 @@
     "next": "13.5.2",
     "payload": "^2.0.0",
     "payload-admin-bar": "^1.0.6",
+    "payload-plugin-import-export": "^0.1.1",
     "qs": "6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
