--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     environment: Prod Digital Ocean
+    env:
+      HUSKY: 0
 
     steps:
       - name: Checkout code
