--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,21 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install dependencies and run lint
+        run: |
+          cd website-iwv
+          yarn install
+          yarn lint
 
       - name: Deploy to Droplet via SSH
+        if: success()
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.DROPLET_IP }}
@@ -35,6 +47,7 @@ jobs:
             pm2 start payload
             
       - name: Verify deployment
+        if: success()
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.DROPLET_IP }}
@@ -42,4 +55,10 @@ jobs:
           password: ${{ secrets.DROPLET_PASSWORD }}
           port: 22
           script: |
-            pm2 status payload
+            STATUS=$(pm2 status payload | grep -i 'online')
+            if [ -z "$STATUS" ]; then
+              echo "Deployment verification failed. The application is not running."
+              exit 1
+            else
+              echo "Deployment verification succeeded. The application is running."
+            fi
